--- a/catalog.html
+++ b/catalog.html
@@ -48,15 +48,21 @@
                         <h2 class="select-lable">Fashion</h2>
                         <div class="select-block">
                             <p data-value="Not selected" onclick="select(this)" class="active">Not selected</p>
+                            <p data-value="Nail the 90s" onclick="select(this)">Nail the 90s</p>
                             <p data-value="Casual Style" onclick="select(this)">Casual style</p>
+                            <p data-value="New look" onclick="select(this)">New look</p>
+                            <p data-value="Sport" onclick="select(this)">Sport</p>
+                            <p data-value="Vintage" onclick="select(this)">Vintage</p>
+                            <p data-value="Classical style" onclick="select(this)">Classical style</p>
                         </div>
                     </li>
                     <li class="select">
                         <h2 class="select-lable">Product Type</h2>
                         <div class="select-block">
                             <p data-value="Not selected" onclick="select(this)" class="active">Not Selected</p>
-                            <p data-value="2" onclick="select(this)">Option 1</p>
-                            <p data-value="3" onclick="select(this)">Option 2</p>
+                            <p data-value="Coats & Jackets" onclick="select(this)">Coats &amp; Jackets</p>
+                            <p data-value="Dresses" onclick="select(this)">Dresses</p>
+                            <p data-value="Jersey Tops" onclick="select(this)">Jersey Tops</p>
                         </div>
                     </li>
                     <li class="select">
@@ -74,22 +80,34 @@
                         <h2 class="select-lable">Brand</h2>
                         <div class="select-block">
                             <p data-value="Not selected" onclick="select(this)" class="active">Not Selected</p>
-                            <p data-value="Antipodium" onclick="select(this)">Antipoduim</p>
+                            <p data-value="Chi Chi London" onclick="select(this)">Chi Chi London</p>
+                            <p data-value="Antipodium" onclick="select(this)">Antipodium</p>
+                            <p data-value="Adidas" onclick="select(this)">Adidas</p>
+                            <p data-value="New Balance" onclick="select(this)">New Balance</p>
+                            <p data-value="River Island" onclick="select(this)">River Island</p>
                         </div>
                     </li>
                     <li class="select">
                         <h2 class="select-lable">Size</h2>
                         <div class="select-block">
                             <p data-value="Not selected" onclick="select(this)" class="active">Not Selected</p>
+                            <p data-value="UK 2" onclick="select(this)">UK 2</p>
                             <p data-value="UK 18" onclick="select(this)">UK 18</p>
+                            <p data-value="UK 18L" onclick="select(this)">UK 18L</p>
+                            <p data-value="UK 20" onclick="select(this)">UK 20</p>
+                            <p data-value="UK 20L" onclick="select(this)">UK 20L</p>
+                            <p data-value="UK 20S" onclick="select(this)">UK 20S</p>
+                            <p data-value="UK 22S" onclick="select(this)">UK 22S</p>
+                            <p data-value="UK 22" onclick="select(this)">UK 22</p>
                         </div>
                     </li>
                     <li class="select">
                         <h2 class="select-lable">Price Range</h2>
                         <div class="select-block">
                             <p data-value="Not selected" onclick="select(this)" class="active">Not Selected</p>
-                            <p data-value="2" onclick="select(this)">Option 1</p>
-                            <p data-value="3" onclick="select(this)">Option 2</p>
+                            <p data-value="To 99" onclick="select(this)">To &pound;99</p>
+                            <p data-value="100-299" onclick="select(this)">&pound;100-&pound;299</p>
+                            <p data-value="from 300" onclick="select(this)">From &pound;300</p>
                         </div>
                     </li>
                 </ul>
