--- a/item.html
+++ b/item.html
@@ -58,16 +58,16 @@
                 <h3 class="detailed-name">Dark classic fit suit</h3>
                 <p class="item-description">Featuring fine Italian wool, this elegant suit has pick-stitch edging, cascade buttons at the cuffs</p>
                 <p class="detailed-price">&pound;180.60</p>
-                <div id="size" class="item-property-buttons-container">
+                <div id="size" class="item-property-buttons-container sizes">
                     <h5 class="prop-heading">Size</h5>
-                    <button class="btn-prop active-property" type="button" value="UK 52">UK 52</button>
-                    <button class="btn-prop" type="button" value="UK 54">UK 54</button>
-                    <button class="btn-prop" type="button" value="UK 56">UK 56</button>
+                    <button class="btn-prop size active-property" type="button" value="UK 52">UK 52</button>
+                    <button class="btn-prop size" type="button" value="UK 54">UK 54</button>
+                    <button class="btn-prop size" type="button" value="UK 56">UK 56</button>
                 </div>
-                <div id="color" class="item-property-buttons-container">
+                <div id="color" class="item-property-buttons-container colors">
                     <h5 class="prop-heading">Color</h5>
-                    <button class="btn-prop active-property" type="button" value="Black">Black</button>
-                    <button class="btn-prop" type="button" value="Blue">Blue</button>
+                    <button class="btn-prop color active-property" type="button" value="Black">Black</button>
+                    <button class="btn-prop color" type="button" value="Blue">Blue</button>
                 </div>
                 <div class="add-to-bag-container">
                     <a href="javascript:void(0)" id="add-item-button">Add to bag</a>
