--- a/start.html
+++ b/start.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <div class="wrapper">
